2006-07-23  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-print.c: 
	* src/yelp-print.h: 
	* src/yelp-gecko-services.cpp: 
	* src/yelp-gecko-services.h: 
	* src/Yelper.cpp: 
	* configure.in: 
	Move to GtkPrinting.
	Bump min gtk version to 2.10
	Remove libgnomeprint dependency
	
2006-07-22  Don Scorgie  <dscorgie@cvs.gnome.org>

	* configure.in: 
	Remove additional but not run pkg-config check

	* src/yelp-window.c: 
	Remove a couple of headers that shouldn't be here
	Remove call to gnome_help_display_desktop and
	replace with a much simpler call to create a new window
	and show the relevant section of the user guide, making it 
	much quicker to display help->Contents
	
	* src/yelp-html.cpp: 
	* src/yelp-window.c: 
	Remove libgnomeui dependancy from both.
	Switch to GTK_STOCK_ABOUT instead of libgnome equivalent
	
2006-07-21  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-window.c: 
	* src/yelp-search-pager.c: 
	Clean up some compiler warnings
	(Casts and unused variables)
	
2006-07-19  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-toc-pager.c:
	Select the correct translation of the description of sections
	Fixes bug #347816
	Clean up a couple of compiler warnings

2006-07-10  Brent Smith  <gnome@nextreality.net>

	* NEWS:
	* configure.in:
	- Version 2.15.4

2006-07-10  Brent Smith  <gnome@nextreality.net>

	* data/info.xml.in:
	* data/man.xml.in:
	* data/scrollkeeper.xml:
	* data/toc.xml.in:
	- Restructure the table of contents to make most documentation 
	accessible via a single click (except for man pages and info pages)
	- Put descriptions for each section at the top in the right side 
	above the document listing
	- Rename the top level category to 'Desktop' and include the 
	User guide, System Administration Guide, and Accessibility Guide 
	in this section
	* src/yelp-pager.c: (yelp_pager_get_page_from_id):
	* src/yelp-pager.h:
	* src/yelp-toc-pager.c: (toc_pager_resolve_frag),
	(toc_process_pending), (process_mandir_pending),