@@ -1,5 +1,8 @@
 2006-07-23  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* src/yelp-settings.c: 
+	Use a gtk_link_button instead of gnome_href
+
 	* src/yelp-print.c: 
 	* src/yelp-print.h: 
 	* src/yelp-gecko-services.cpp: 
